--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -37,6 +37,7 @@
     "export": "Export",
     "geolocator": "Geolocator",
     "notifications": "Notifications",
+    "no_notifications_available": "No notifications available",
     "fullscreen": "Full Screen",
     "help": "Help",
     "layers": "Layers",
