--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -105,6 +105,8 @@
   "dataTable": {
     "icon": "ICON",
     "zoom": "ZOOM",
-    "exportBtn": "Export"
+    "exportBtn": "Export",
+    "jsonExportBtn": "Download GeoJSON",
+    "downloadAsCSV": "Download as CSV"
   }
 }
