--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -105,6 +105,8 @@
   "dataTable": {
     "icon": "ICÔNE",
     "zoom": "ZOOM",
-    "exportBtn": "Exporter"
+    "exportBtn": "Exporter",
+    "jsonExportBtn": "Télécharger GeoJSON",
+    "downloadAsCSV": "Télécharger la CSV"
   }
 }
