--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -88,6 +88,10 @@
       "notfound": "La sous couche __param__ de la couche GeoView __param__ n'existe pas sur le sereur",
       "createtwice": "On ne peut exécuter deux fois la méthode createGeoViewRasterLayers pour la carte __param__",
       "usedtwice": "Utilisation en double de l'identifiant de couche geoview [__param__] sur la carte __param__"
+    },
+    "schema": {
+      "notFound": "Une erreur de schéma a été trouvée, vérifiez la console pour voir ce qui ne va pas.",
+      "wrongPath": "Impossible de trouver le schéma ([__param__])"
     }
   },
   "exportModal": {
