--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -57,7 +57,12 @@
   "details": {
     "zoom_to": "Zoom à l'élément",
     "select": "Sélectionner l'élément sur la carte",
-    "external_link": "Lien externe"
+    "external_link": "Lien externe",
+    "mainDescription": "Pour commencer, sélectionnez n'importe quelle couche visible sur la carte. Si vous ne voyez aucune couche sur la carte, assurez-vous de les sélectionner dans la section Légende.",
+    "detailsView": "Vue détaillée",
+    "selectVisbleLayer": "Sélectionnez n'importe quelle couche visible sur la carte pour commencer",
+    "availableLayers": "Couche disponibles",
+    "selectedFeature": "Fonctionnalité Item"
   },
   "lightbox": {
     "next": "Prochaine",
