--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -52,7 +52,11 @@
     "expand_legend": "Développer la légende",
     "toggle_cluster": "Basculer le groupement",
     "toggle_opacity": "Basculer le Opacité",
-    "zoom_to": "Zoom sur la Couche"
+    "zoom_to": "Zoom sur la Couche",
+    "overview_title": "Legend Overview",
+    "add_layer": "Add Layer",
+    "selected_legend": "Selected Legend",
+    "sort_layers": "Sort Layers"
   },
   "details": {
     "zoom_to": "Zoom à l'élément",
