--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -53,20 +53,21 @@
     "toggle_cluster": "Basculer le groupement",
     "toggle_opacity": "Basculer le Opacité",
     "zoom_to": "Zoom sur la Couche",
-    "overview_title": "Legend Overview",
-    "add_layer": "Add Layer",
-    "selected_legend": "Selected Legend",
-    "sort_layers": "Sort Layers"
+    "overview_title": "Aperçu de la légende",
+    "add_layer": "Ajouter un calque",
+    "selected_legend": "Légende sélectionnée",
+    "sort_layers": "Trier les calques",
+    "selected_Layers": "Un aperçu des calques actuellement sélectionnés",
+    "re-arrange": "Réarranger",
+    "categories_title" : "Catégories"
   },
   "details": {
     "zoom_to": "Zoom à l'élément",
     "select": "Sélectionner l'élément sur la carte",
     "external_link": "Lien externe",
-    "mainDescription": "Pour commencer, sélectionnez n'importe quelle couche visible sur la carte. Si vous ne voyez aucune couche sur la carte, assurez-vous de les sélectionner dans la section Légende.",
     "detailsView": "Vue détaillée",
     "selectVisbleLayer": "Sélectionnez n'importe quelle couche visible sur la carte pour commencer",
     "availableLayers": "Couche disponibles",
-    "selectedFeature": "Fonctionnalité Item",
     "feature": "item",
     "clickOnMap": "Cliquer sur la carte",
     "nextFeatureBtn": "Item suivant",
@@ -129,6 +130,10 @@
     "jsonExportBtn": "Télécharger GeoJSON",
     "downloadAsCSV": "Télécharger la CSV",
     "filterMap": "Filtrer la carte",
-    "stopFilterMap": "Filtrer la carte d'arrêt"
+    "stopFilterMap": "Filtrer la carte d'arrêt",
+    "leftPanelHeading": "Tables disponible",
+    "rightPanelHeading": "Table sélectionnée",
+    "rowsSelected": "{rowsSelected} sur {totalRows} ligne(s) sélectionnée(s)",
+    "rowsFiltered": "{rowsFiltered} sur {totalRows} ligne(s) filtrée(s)"
   }
 }
