--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -2,7 +2,9 @@
   "general": {
     "close": "Close",
     "open": "Open",
-    "layers": "Layers"
+    "layers": "Layers",
+    "add": "Add",
+    "remove": "Remove"
   },
   "mapnav": {
     "arianavbar": "vertical button group for map navigation",
@@ -70,7 +72,7 @@
     "external_link": "External Link",
     "detailsView": "Details View",
     "selectVisbleLayer": "Select any visible layer on the map to get started",
-    "availableLayers": "Available Layers",
+    "availableLayers": "Layers",
     "feature": "feature",
     "clickOnMap": "Click on map",
     "nextFeatureBtn": "Next feature",
@@ -135,6 +137,7 @@
     "enlargeBtn": "Enlarge",
     "reduceBtn": "Reduce",
     "features": "feature(s)",
-    "featureFiltered": "features filtered"
+    "featureFiltered": "features filtered",
+    "images": "Images"
   }
 }
