--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -4,7 +4,8 @@
     "open": "Ouvrir",
     "layers": "Couches",
     "add": "Ajouter",
-    "remove": "Retirer"
+    "remove": "Retirer",
+    "name": "Nom"
   },
   "mapnav": {
     "arianavbar": "groupe de buttons vertical pour navigation sur la carte",
