--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -1,11 +1,12 @@
 {
   "general": {
-    "close": "Fermer",
-    "open": "Ouvrir",
-    "layers": "Couches",
     "add": "Ajouter",
-    "remove": "Retirer",
-    "name": "Nom"
+    "close": "Fermer",
+    "layers": "Couches",
+    "name": "Nom",
+    "exit": "Sortir",
+    "open": "Ouvrir",
+    "remove": "Retirer"
   },
   "mapnav": {
     "arianavbar": "groupe de buttons vertical pour navigation sur la carte",
@@ -62,10 +63,13 @@
     "selected_legend": "Légende sélectionnée",
     "sort_layers": "Trier les calques",
     "selected_Layers": "Un aperçu des calques actuellement sélectionnés",
-    "re-arrange": "Réarranger",
+    "sort": "Trier",
     "categories_title": "Catégories",
     "layer_has_error": "La couche a une erreur...",
-    "layer_is_loading": "La couche se charge..."
+    "layer_is_loading": "La couche se charge...",
+    "table_details": "Détails du tableau",
+    "refresh_layer": "Rafraîchir la couche",
+    "highlight_layer": "Couche de mise en évidence"
   },
   "details": {
     "zoom_to": "Zoom à l'élément",
@@ -73,7 +77,6 @@
     "external_link": "Lien externe",
     "detailsView": "Vue détaillée",
     "selectVisbleLayer": "Sélectionnez n'importe quelle couche visible sur la carte pour commencer",
-    "availableLayers": "Couche",
     "feature": "item",
     "clickOnMap": "Cliquer sur la carte",
     "nextFeatureBtn": "Item suivant",
@@ -132,7 +135,6 @@
     "downloadAsCSV": "Télécharger la CSV",
     "filterMap": "Filtrer la carte",
     "stopFilterMap": "Filtrer la carte d'arrêt",
-    "leftPanelHeading": "Couches",
     "rowsSelected": "{rowsSelected} sur {totalRows} ligne(s) sélectionnée(s)",
     "rowsFiltered": "{rowsFiltered} sur {totalRows} ligne(s) filtrée(s)",
     "enlargeBtn": "Agrandir",
