--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -140,5 +140,8 @@
     "featureFiltered": "features filtered",
     "images": "Images",
     "close": "Close"
+  },
+  "geoChart": {
+    "noChartAvailable": "Click on the map layer with chart"
   }
 }
