--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -140,5 +140,8 @@
     "featureFiltered": "Item filtrée(s)",
     "images": "Images",
     "close": "Fermer"
+  },
+  "geochart": {
+    "noChartAvailable": "Cliquez sur la couche de carte avec le graphique"
   }
 }
