--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -65,9 +65,14 @@
     "layerLoading": "La couche se charge...",
     "tableDetails": "Détails du tableau",
     "refreshLayer": "Rafraîchir la couche",
-    "highlightLayer": "Couche de mise en évidence"
+    "highlightLayer": "Couche de mise en évidence",
+    "subLayersCount": "{count} sous-couches",
+    "itemsCount": "{count} sur {totalCount} éléments"
   },
   "layers": {
+    "removingLayers": "Suppression des couches",
+    "reArrangeLayers": "Réorganiser les couches",
+    "removeLayerDescription": "Pour supprimer une couche, cliquez sur l'icône de suppression à droite de chaque couche.",
     "sortingDescription": "<p>Pour trier les calques, vous pouvez simplement faire glisser et déposer chaque panneau de calque.</p><h4>Utilisation du clavier pour faire glisser et déposer</h4><p>Si vous utilisez le clavier pour trier les calques, suivez les instructions suivantes :</p><ul><li>Lorsque le panneau de calque est en focus, utilisez la barre d'espace pour soulever le panneau. Cela lancera le glisser-déposer.</li><li>Une fois le glisser-déposer commencé, vous pouvez utiliser les flèches haut et bas pour déplacer le panneau.</li><li>Vous pouvez utiliser la barre d'espace pour déposer le panneau.</li><li>Utilisez la touche ÉCHAP pour annuler le glisser-déposer.</li></ul>"
   },
   "details": {
@@ -112,7 +117,10 @@
     "schema": {
       "notFound": "Une erreur de schéma a été trouvée, vérifiez la console pour voir ce qui ne va pas.",
       "wrongPath": "Impossible de trouver le schéma ([__param__])"
-    }
+    },
+    "changeDisplayLanguageLayers": "Les couches ne peuvent être chargée(s) de nouveau car la configuration ne supporte pas ce langage",
+    "changeDisplayLanguage": "Seulement 'en' et 'fr' sont supporées",
+    "changeDisplayTheme": "Theme non supporé"
   },
   "exportModal": {
     "title": "Exporter la carte en PNG",
@@ -145,5 +153,9 @@
   },
   "geochart": {
     "noChartAvailable": "Cliquez sur la couche de carte avec le graphique"
+  },
+  "footerTabsContainer": {
+    "focusToMap": "Aller à la carte",
+    "focusToFooter": "Aller au pied de page"
   }
 }
