--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -70,6 +70,7 @@
     "itemsCount": "{count} of {totalCount} items"
   },
   "layers": {
+    "subLayersList": "Sub-Layers List",
     "removingLayers": "Removing Layers",
     "reArrangeLayers": "Re-arrange Layers",
     "removeLayerDescription": "To remove a layer, click on the delete icon to the right of the layer. To revert to back to view functionality click on the delete button at the top.",
@@ -87,7 +88,8 @@
     "previousFeatureBtn": "Previous feature",
     "clearAllfeatures": "Clear all feature highlights",
     "highlightFeaturesOnMap": "Highlight features on map",
-    "keepFeatureSelected": "Keep feature highlighted"
+    "keepFeatureSelected": "Keep feature highlighted",
+    "detailsInstructions": "Details Instructions"
   },
   "lightbox": {
     "next": "Next",
@@ -120,7 +122,8 @@
     },
     "changeDisplayLanguageLayers": "Layers can not be relaoded because the configuration does not support this language",
     "changeDisplayLanguage": "Only 'en' and 'fr' are supported",
-    "changeDisplayTheme": "Theme unsuported"
+    "changeDisplayTheme": "Theme unsuported",
+    "changeDisplayProjection": "Projection unsuported"
   },
   "exportModal": {
     "title": "Export Map as PNG",
