--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -70,6 +70,7 @@
     "itemsCount": "{count} sur {totalCount} éléments"
   },
   "layers": {
+    "subLayersList": "Liste des sous-couches",
     "removingLayers": "Suppression des couches",
     "reArrangeLayers": "Réorganiser les couches",
     "removeLayerDescription": "Pour supprimer un calque, cliquez sur l'icône de suppression à droite du calque. Pour revenir à la fonctionnalité d'affichage, cliquez sur le bouton Supprimer en haut.",
@@ -87,7 +88,8 @@
     "previousFeatureBtn": "Item précédent",
     "clearAllfeatures": "Déselctionner tout les items",
     "highlightFeaturesOnMap": "Déselctionner tout les items",
-    "keepFeatureSelected": "Garder l'élément sélectionné"
+    "keepFeatureSelected": "Garder l'élément sélectionné",
+    "detailsInstructions": "Instructions détaillées"
   },
   "lightbox": {
     "next": "Prochaine",
@@ -120,7 +122,8 @@
     },
     "changeDisplayLanguageLayers": "Les couches ne peuvent être chargée(s) de nouveau car la configuration ne supporte pas ce langage",
     "changeDisplayLanguage": "Seulement 'en' et 'fr' sont supporées",
-    "changeDisplayTheme": "Theme non supporé"
+    "changeDisplayTheme": "Theme non supporté",
+    "changeDisplayProjection": "Projection non supportée"
   },
   "exportModal": {
     "title": "Exporter la carte en PNG",
