--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -54,6 +54,7 @@
   "legend": {
     "unknown": "Unknown Layer Title",
     "removeLayer": "Remove Layer",
+    "opacity": "Opacity",
     "toggleOpacity": "Toggle Opacity DEPRECATED",
     "zoomTo": "Zoom to Layer",
     "overviewTitle": "Legend Overview",
@@ -76,8 +77,9 @@
     "sortingDescription": "<p>To sort the layers you can simply drag and drop each layer panel.</p><h4>Using the keyboard for drag and drop</h4><p>If you using the keyboard for sorting layers, note the following;</p><ul><li>When the layer panel has focus use the spacebar to lift the panel. This will start the drag.</li><li>Once the drag has started you can use the up and down arrows to move the panel</li><li>You can use the spacebar to drop the panel.</li><li>Use the ESC key to cancel drag</li></ul>",
     "completeTable": "For complete data, please check data table tabs.",
     "dataModalFeaturesDisplayed": "{numberOfFeatures} of {totalNumberOfFeatures} features displayed.",
-    "opacity": "Opacity",
-    "opacityMax": "Max from parent"
+    "reloadLayer": "Reload layer",
+    "toggleVisibility": "Toggle visibility",
+    "toggleCollapse": "Toggle collapse"
   },
   "details": {
     "zoomTo": "Zoom to feature",
