--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -54,6 +54,7 @@
   "legend": {
     "unknown": "Titre de légende inconnu",
     "removeLayer": "Supprimer le calque",
+    "opacity": "Opacité",
     "toggleOpacity": "Basculer le Opacité DEPRECATED",
     "zoomTo": "Zoom sur la Couche",
     "overviewTitle": "Aperçu de la légende",
@@ -76,8 +77,9 @@
     "sortingDescription": "<p>Pour trier les calques, vous pouvez simplement faire glisser et déposer chaque panneau de calque.</p><h4>Utilisation du clavier pour faire glisser et déposer</h4><p>Si vous utilisez le clavier pour trier les calques, suivez les instructions suivantes :</p><ul><li>Lorsque le panneau de calque est en focus, utilisez la barre d'espace pour soulever le panneau. Cela lancera le glisser-déposer.</li><li>Une fois le glisser-déposer commencé, vous pouvez utiliser les flèches haut et bas pour déplacer le panneau.</li><li>Vous pouvez utiliser la barre d'espace pour déposer le panneau.</li><li>Utilisez la touche ÉCHAP pour annuler le glisser-déposer.</li></ul>",
     "completeTable": "Pour des données complètes, veuillez consulter les onglets des tableaux de données.",
     "dataModalFeaturesDisplayed": "{numberOfFeatures} des {totalNumberOfFeatures} caractéristiques affichées",
-    "opacity": "Opacité",
-    "opacityMax": "Max depuis le parent"
+    "reloadLayer": "Recharger la couche",
+    "toggleVisibility": "Basculer la visibilité",
+    "toggleCollapse": "Basculer l'effondrement"
   },
   "details": {
     "zoomTo": "Zoom à l'élément",
