--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -78,8 +78,9 @@
     "completeTable": "Pour des données complètes, veuillez consulter les onglets des tableaux de données.",
     "dataModalFeaturesDisplayed": "{numberOfFeatures} des {totalNumberOfFeatures} caractéristiques affichées",
     "reloadLayer": "Recharger la couche",
+    "visibilityIsAlways": "La visibilité est toujours activée",
     "toggleVisibility": "Basculer la visibilité",
-    "toggleCollapse": "Basculer l'effondrement"
+    "toggleCollapse": "Basculer la fermeture"
   },
   "details": {
     "zoomTo": "Zoom à l'élément",
