--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -88,7 +88,7 @@
     "select": "Highlight feature on map",
     "externalLink": "External Link",
     "detailsView": "Details View",
-    "selectVisbleLayer": "Click on a feature on the map to view it's details",
+    "selectVisbleLayer": "Click on a feature on the map to view its details",
     "feature": "feature",
     "clickOnMap": "Click on map",
     "nextFeatureBtn": "Next feature",
