--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -77,7 +77,7 @@
     "completeTable": "For complete data, please check data table tabs.",
     "dataModalFeaturesDisplayed": "{numberOfFeatures} of {totalNumberOfFeatures} features displayed.",
     "opacity": "Opacity",
-    "opacityMax": "Max from parent",
+    "opacityMax": "Maximum from parent",
     "reloadLayer": "Reload layer",
     "visibilityIsAlways": "Visibility is always enabled",
     "toggleVisibility": "Toggle visibility",
