--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -6,7 +6,8 @@
     "layers": "Layers",
     "name": "Name",
     "open": "Open",
-    "remove": "Remove"
+    "remove": "Remove",
+    "view": "View"
   },
   "mapnav": {
     "arianavbar": "vertical button group for map navigation",
@@ -190,6 +191,7 @@
   },
   "footerTabsContainer": {
     "focusToMap": "Focus to map",
-    "focusToFooter": "Focus to footer"
+    "focusToFooter": "Focus to footer",
+    "resizeTooltip": "Resize"
   }
 }
