--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -53,6 +53,7 @@
     "repoLink": "Repo link"
   },
   "legend": {
+    "title": "Legend",
     "unknown": "Unknown Layer Title",
     "removeLayer": "Remove Layer",
     "toggleOpacity": "Toggle Opacity DEPRECATED",
@@ -70,6 +71,7 @@
     "itemsCount": "{count} of {totalCount} items"
   },
   "layers": {
+    "title": "Layers",
     "subLayersList": "Sub-Layers List",
     "removingLayers": "Removing Layers",
     "reArrangeLayers": "Re-arrange Layers",
@@ -109,6 +111,7 @@
     "toggleCollapse": "Toggle collapse"
   },
   "details": {
+    "title": "Details",
     "zoomTo": "Zoom to feature",
     "select": "Highlight feature on map",
     "externalLink": "External Link",
@@ -170,6 +173,7 @@
     "alticon": "Selected feature icon"
   },
   "dataTable": {
+    "title": "Data Table",
     "icon": "ICON",
     "zoom": "ZOOM",
     "exportBtn": "Export",
