--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -100,6 +100,7 @@
     "errorNone": "No file or source added",
     "errorFile": "Only geoJSON and GeoPackage files can be used",
     "errorServer": "source is not valid",
+    "errorNotLoaded": "An error occured when loading the geoview layer",
     "errorProj": "does not support current map projection",
     "only": "only",
     "opacity": "Opacity",
@@ -108,7 +109,8 @@
     "visibilityIsAlways": "Visibility is always enabled",
     "toggleVisibility": "Toggle visibility",
     "toggleCollapse": "Toggle collapse",
-    "querying": "Querying"
+    "querying": "Querying",
+    "layerAddedSuccessfully": "Layer __param__ added successfully"
   },
   "details": {
     "title": "Details",
@@ -193,6 +195,13 @@
     "featureFiltered": "features filtered",
     "images": "Images",
     "close": "Close"
+  },
+  "geoChart": {
+    "noChartAvailable": "Click on the map layer with chart"
+  },
+  "guide": {
+    "title": "Guide",
+    "errorMessage": "Sorry, unable to find the help document!"
   },
   "footerBar": {
     "focusToMap": "Focus to map",
