--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -100,6 +100,7 @@
     "errorNone": "Pas de fichier ou de source ajouté",
     "errorFile": "Seuls les fichiers geoJSON et GeoPackage peuvent être utilisés",
     "errorServer": "source n'est pas valide",
+    "errorNotLoaded": "Une erreur s'est produite lors du chargement de la couche geoview",
     "errorProj": "ne prend pas en charge la projection cartographique actuelle",
     "only": "seulement",
     "opacity": "Opacité",
@@ -108,7 +109,8 @@
     "visibilityIsAlways": "La visibilité est toujours activée",
     "toggleVisibility": "Basculer la visibilité",
     "toggleCollapse": "Basculer la fermeture",
-    "querying": "Requête en cours"
+    "querying": "Requête en cours",
+    "layerAddedSuccessfully": "Couche __param__ ajoutée avec succès"
   },
   "details": {
     "title": "Détails",
@@ -193,6 +195,13 @@
     "featureFiltered": "Item filtrée(s)",
     "images": "Images",
     "close": "Fermer"
+  },
+  "geochart": {
+    "noChartAvailable": "Cliquez sur la couche de carte avec le graphique"
+  },
+  "guide": {
+    "title": "Guide",
+    "errorMessage": "Désolé, impossible de trouver le document d'aide !"
   },
   "footerBar": {
     "focusToMap": "Aller à la carte",
