--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -67,7 +67,8 @@
     "refreshLayer": "Refresh layer",
     "highlightLayer": "Highlight layer",
     "subLayersCount": "{count} sub-layers",
-    "itemsCount": "{count} of {totalCount} items"
+    "itemsCount": "{count} of {totalCount} items",
+    "legendInstructions": "Legend Instructions"
   },
   "layers": {
     "title": "Layers",
@@ -110,7 +111,9 @@
     "toggleVisibility": "Toggle visibility",
     "toggleCollapse": "Toggle collapse",
     "querying": "Querying",
-    "layerAddedSuccessfully": "Layer __param__ added successfully"
+    "layerAddedSuccessfully": "Layer __param__ added",
+    "instructionsNoLayersTitle": "No layers visible",
+    "instructionsNoLayersBody": "Add visible layers on the map."
   },
   "details": {
     "title": "Details",
@@ -126,7 +129,8 @@
     "clearAllfeatures": "Clear all feature highlights",
     "highlightFeaturesOnMap": "Highlight features on map",
     "keepFeatureSelected": "Keep feature highlighted",
-    "detailsInstructions": "Details Instructions"
+    "detailsInstructions": "Details Instructions",
+    "loadingUI": "Loading user interface"
   },
   "lightbox": {
     "next": "Next",
