--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -158,7 +158,7 @@
     "layer": {
       "loadfailed": "Layer [__param__] failed to load on map __param__.",
       "notfound": "The sublayer __param__ of the GeoView layer __param__ does not exist on the server",
-      "createtwice": "Can not execute twice the createGeoViewRasterLayers method for the map __param__",
+      "createtwice": "Can not execute the createGeoViewRasterLayers method twice for the layer __param__ on map __param__",
       "usedtwice": "Duplicate use of geoview layer identifier [__param__] on map __param__",
       "multipleUUID": "GeoCore layers may only have one GeoCore UUID per layer"
     },
